--- a/LSPatchNotes/stylesheet.css
+++ b/LSPatchNotes/stylesheet.css
@@ -17,11 +17,17 @@ h1,h2,h3
     line-height:1.2
 }
 
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .centerImage
 {
     top: 20%;
     margin: auto;
     width: 100%;
+    animation: fadein 1.5s;
 }
 
 .center 
@@ -40,7 +46,19 @@ ul
     margin-top: -6.5em;
     margin-bottom: -6.5em;
 }
- 
+
+li {
+    padding: 10px;
+    border-radius: 10px;
+    margin: auto;
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
+    animation: fadein 1.5s;
+    transition: 0.5s;
+    background: #737E8A;
+}
+
+
 li img {
     float: left;
     margin: 0 15px 0 0;
@@ -49,20 +67,13 @@ li img {
     border-radius: 10px;
 }
 
-li {
-    padding: 10px;
-    border-radius: 10px;
-    margin: auto;
-    margin-bottom: 20px;
-}
-
 li p
 {
     white-space: pre-wrap;
 }
  
 li:hover {
-    background: #515458;
+    background: #54606F;
     cursor: pointer;
 }
 
@@ -71,7 +82,7 @@ li:hover {
     body
     {
         color:#dbefef;
-        background:#626c74;
+        background:#3c4856;
     }
     
     a:link
