--- a/LSPatchNotes/stylesheet.css
+++ b/LSPatchNotes/stylesheet.css
@@ -1,76 +1,76 @@
 body
 {
-    max-width:700px;
-    margin: auto;
-    font:18px/1.5 -apple-system, 
-    BlinkMacSystemFont, "Segoe UI", 
-    Roboto, "Helvetica Neue", Arial, 
-    "Noto Sans", sans-serif, "Apple Color Emoji", 
-    "Segoe UI Emoji", "Segoe UI Symbol", 
-    "Noto Color Emoji";
     color:#dbefef;
     background:#3c4856;
     white-space: pre;
+
+    font:18px/1.5 'Open Sans';
 }
 
-h1,h2,h3
+h2
 {
-    line-height:1.2
+    margin-bottom: -9%;
+    text-align: center;
+    font-size: xx-large;
 }
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-.centerImage
+h3
 {
-    top: 20%;
-    margin: auto;
-    width: 95%;
+    font-size: xx-large;
+    line-height: 250%;
+}
+
+.topImage
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    animation: fadein 1.5s;
+    margin-bottom: -6%;
+    margin-top: -2%;
+}
+
+.commitContainer
+{
+    display: -webkit-flex;
+    display: flex;
+    flex: 1;
     animation: fadein 1.5s;
 }
 
-.center 
+.commitContainer > div
 {
-    text-align: center;
-    margin: 0 auto;
-}
-
-div
-{
-    margin: auto;
-}
-
-ul
-{
-    margin-top: -6.5em;
-    margin-bottom: -6.5em;
+    margin-left: 5%;
+    margin-right: 5%;
+    flex: 1;
 }
 
 li {
-    padding: 10px;
-    border-radius: 10px;
-    margin: auto;
-    margin-bottom: 20px;
     box-shadow: 0px 4px 8px rgba(0,0,0,0.75);
-    animation: fadein 1.5s;
     transition: 0.5s;
     background: #737E8A;
-}
-
-
-li img {
-    float: left;
-    margin: 0 15px 0 0;
-    width: 64px;
-    max-width: 64px;
+    list-style-type: none;
     border-radius: 10px;
 }
 
 li p
 {
     white-space: pre-wrap;
+    margin: 0 0 0 10px;
+}
+
+li h2
+{
+    margin: 10px 0 10px 10px; 
+}
+
+li img
+{
+    float: left;
+    margin: 10px 15px 0 10px;
+    width: 64px;
+    border-radius: 10px;
 }
  
 li:hover {
@@ -78,12 +78,8 @@ li:hover {
     cursor: pointer;
 }
 
-a:link
-{
-    color:#5bf
-}
-    
-a:visited
-{
-    color:#ccf
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
