--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,44 +1,124 @@
-body {
-	margin: 0;
-	padding: 0;
-	/* background: #c0c0c0; */
-	background: #ece9d8;
+@font-face
+{
+	font-family: 'ITC Avant Garde Standard';
+	src: url('Fonts/ITCAvantGardeStdBk.woff') format('woff');
 }
 
-main {
-	width: 87%;
-	margin-left: 14%;
-	margin-top: 1%;
+@font-face
+{
+	font-family: 'ITC Avant Garde Standard Small';
+	src: url('Fonts/ITCAvantGardeStdXLt.woff') format('woff');
+}
+
+body 
+{
+	margin: 0;
+	padding: 0;
+	background-color: #35477d;
+	font-family: 'ITC Avant Garde Standard';
+}
+
+main 
+{
+	margin-top: 15%;
 	margin-right: 2%;
 	margin-bottom: 5%;
 }
 
-aside {
-	width: 11%;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	padding: 8px;
-	display: flex;
-	align-items: stretch;
+main > h1
+{
+	color: #f67280;
+	font-weight: 500;
+	text-align: center;
+	line-height: 1.4;
 }
 
-aside .tree-view {
-	width: 100%;
-	/* TODO: Move scrollbar into the recessed region? */
-	overflow: auto;
+main > h2
+{
+	margin-top: 5%;
+	line-height: 0.7;
+	color: #f67280;
+	text-align: center;
+	font-family: 'ITC Avant Garde Standard Small';
 }
 
-summary {
-	user-select: none;
-	cursor: pointer;
-	display: inline;
+ul 
+{
+    list-style-type: none;
 }
 
-summary::-webkit-details-marker {
-	display: none;
+.tooltip 
+{
+    position: relative;
+	margin: 10px;
+	text-align: center;
+	font-family: 'ITC Avant Garde Standard Small';
 }
 
-details[open] summary {
-	margin-bottom: 8px;
+.tooltip::after 
+{
+    background-color: #2b2e4a;
+    border-radius: 10px;
+    color: #e84545;
+    display: none;
+    padding: 10px 15px;
+    position: absolute;
+    text-align: center;
+    z-index: 999;
+}
+
+.tooltip.bottom.twitter::after 
+{
+	content: 'Twitter';
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, calc(100% + 10px));
+}
+
+.tooltip.bottom.github::after 
+{
+	content: 'Github';
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, calc(100% + 10px));
+}
+
+.tooltip.bottom.linkedin::after 
+{
+	content: 'LinkedIn';
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, calc(100% + 10px));
+}
+
+.tooltip:hover::after 
+{
+    display: block;
+}
+
+img:hover
+{
+	filter: brightness(85%);
+}
+
+a:link 
+{
+	color: #f67280;
+}
+
+a:visited 
+{
+	color: #f67280;
+}
+
+a:hover 
+{
+	color: #c06c84;
+}
+
+@media screen and (prefers-reduced-motion: no-preference) {
+	html,
+	body {
+	  scroll-behavior: smooth;
+	}
 }
