--- a/cv/stylesheet.css
+++ b/cv/stylesheet.css
@@ -1,5 +1,35 @@
-body, html {
+@font-face
+{
+	font-family: 'ITC Avant Garde Standard';
+	src: url('../Fonts/ITCAvantGardeStdBk.woff') format('woff');
+}
+
+@font-face
+{
+	font-family: 'ITC Avant Garde Standard Small';
+	src: url('../Fonts/ITCAvantGardeStdXLt.woff') format('woff');
+}
+
+body, html 
+{
     height: 100%;
+    background-color: #35477d;
+}
+
+h1
+{
+	color: #f67280;
+	font-weight: 600;
+	text-align: center;
+    font-family: 'ITC Avant Garde Standard';
+}
+
+h3
+{
+	color: #f67280;
+	font-weight: 600;
+	text-align: center;
+    font-family: 'ITC Avant Garde Standard Small';
 }
 
 #CVImage
@@ -7,5 +37,24 @@ body, html {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
     width: 50%;
+    border-radius: 3%;
+    box-shadow: 0 4px 8px 0 #1e2022, 0 6px 20px 0 #1e2022;
+}
+
+a:link 
+{
+	color: #f67280;
+}
+
+a:visited 
+{
+	color: #f67280;
+}
+
+a:hover 
+{
+	color: #c06c84;
 }
