--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,104 +1,75 @@
 @font-face
 {
-	font-family: 'ITC Avant Garde Standard';
-	src: url('Fonts/ITCAvantGardeStdBk.woff') format('woff');
+	font-family: 'Futura PT Medium';
+	src: url('Fonts/Futura/FuturaPTMedium.otf') format('opentype');
 }
 
 @font-face
 {
-	font-family: 'ITC Avant Garde Standard Small';
-	src: url('Fonts/ITCAvantGardeStdXLt.woff') format('woff');
+	font-family: 'Futura PT Light';
+	src: url('Fonts/Futura/FuturaPTLight.otf') format('opentype');
+}
+
+@font-face
+{
+	font-family: 'Futura PT Condensed';
+	src: url('Fonts/Futura/FuturaPTCondBookOblique.otf') format('opentype');
 }
 
 body 
 {
 	margin: 0;
 	padding: 0;
-	background-color: #35477d;
-	font-family: 'ITC Avant Garde Standard';
+	background-color: #22223b;
+	font-family: 'Futura PT Medium';
 }
 
-main 
+.introduction
 {
-	margin-top: 15%;
-	margin-right: 2%;
-	margin-bottom: 5%;
+	color: #c9ada7;
+	text-align: left;
+	margin-left: 9%;
+	margin-top: 10%;
+	font-size: 150%;
+	font-weight: 400;
+	font-family: 'Futura PT Condensed';
 }
 
-main > h1
+.name
 {
-	color: #f67280;
+	color: #f2e9e4;
+	text-align: left;
+	margin-left: 10%;
+	margin-top: -1%;
+	font-size: 400%;
+	font-family: 'Futura PT Medium';
+}
+
+.subheading
+{
+	color: #D4CFC7;
 	font-weight: 500;
-	text-align: center;
+	font-size: larger;
+	text-align: left;
 	line-height: 1.4;
+	margin-top: -2%;
+	margin-left: 10%;
+	font-family: 'Futura PT Light';
 }
 
-main > h2
+.social-media
 {
-	margin-top: 5%;
-	line-height: 0.7;
-	color: #f67280;
-	text-align: center;
-	font-family: 'ITC Avant Garde Standard Small';
+	text-align: right;
+	margin-top: 6%;
+	margin-right: 5%;
+	line-height: 0.8;
 }
 
-ul 
-{
-    list-style-type: none;
-}
-
-.tooltip 
-{
-    position: relative;
-	margin: 10px;
-	text-align: center;
-	font-family: 'ITC Avant Garde Standard Small';
-}
-
-.tooltip::after 
-{
-    background-color: #2b2e4a;
-    border-radius: 10px;
-    color: #e84545;
-    display: none;
-    padding: 10px 15px;
-    position: absolute;
-    text-align: center;
-    z-index: 999;
-}
-
-.tooltip.bottom.twitter::after 
-{
-	content: 'Twitter';
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, calc(100% + 10px));
-}
-
-.tooltip.bottom.github::after 
-{
-	content: 'Github';
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, calc(100% + 10px));
-}
-
-.tooltip.bottom.linkedin::after 
-{
-	content: 'LinkedIn';
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, calc(100% + 10px));
-}
-
-.tooltip:hover::after 
-{
-    display: block;
-}
-
-img:hover
-{
-	filter: brightness(85%);
+.social-media > h3
+{	
+	color: #D4CFC7;
+	font-family: 'Futura PT Light';
+	font-weight: 500;
 }
 
 a:link 
