--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,8 +19,18 @@
 	font-display: swap;
 }
 
+@keyframes fadeInAnimation { 
+    0% { 
+        opacity: 0; 
+    } 
+    100% { 
+        opacity: 1; 
+     } 
+}
+
 body 
 {
+	animation: fadeInAnimation ease 500ms;
 	margin: 0;
 	padding: 0;
 	background-color: #22223b;
