CSS Responsiveness fixes
- Changed a few small things for mobile screens so it looks better.

--- a/cv/stylesheet.css
+++ b/cv/stylesheet.css
@@ -109,3 +109,9 @@ a:hover
 	color: #c06c84;
 	text-decoration: underline;
 }
+
+@media screen and (max-width: 991px) {
+	#CVImage {
+		width: 100%;
+	}
+}
