--- a/stylesheet.css
+++ b/stylesheet.css
@@ -142,3 +142,13 @@ a:hover
 	  scroll-behavior: smooth;
 	}
 }
+
+@media screen and (max-width: 576px) {
+	h1.name {
+		font-size: 375%;
+	}
+	
+	p.subheading {
+		padding-right: 8%;
+	}
+}
