--- a/cv/stylesheet.css
+++ b/cv/stylesheet.css
@@ -1,14 +1,14 @@
 @font-face
 {
 	font-family: 'Futura PT Medium';
-	src: url('../Fonts/Futura/FuturaPTMedium.otf') format('opentype');
+	src: url('../fonts/FuturaPTMedium.otf') format('opentype');
 	font-display: swap;
 }
 
 @font-face
 {
 	font-family: 'Futura PT Light';
-	src: url('../Fonts/Futura/FuturaPTLight.otf') format('opentype');
+	src: url('../fonts/FuturaPTLight.otf') format('opentype');
 	font-display: swap;
 }
 
