--- a/projects/stylesheet.css
+++ b/projects/stylesheet.css
@@ -1,21 +1,21 @@
 @font-face
 {
 	font-family: 'Futura PT Medium';
-	src: url('../Fonts/Futura/FuturaPTMedium.otf') format('opentype');
+	src: url('../fonts/FuturaPTMedium.otf') format('opentype');
 	font-display: swap;
 }
 
 @font-face
 {
 	font-family: 'Futura PT Light';
-	src: url('../Fonts/Futura/FuturaPTLight.otf') format('opentype');
+	src: url('../fonts/FuturaPTLight.otf') format('opentype');
 	font-display: swap;
 }
 
 @font-face
 {
 	font-family: 'Futura PT Condensed';
-	src: url('../Fonts/Futura/FuturaPTCondBookOblique.otf') format('opentype');
+	src: url('../fonts/FuturaPTCondBookOblique.otf') format('opentype');
 	font-display: swap;
 }
 
